syntax = "proto3";

option go_package = "protobuf/auth";

message User {
    string name = 1;
    string phone_number = 2;
}

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc SubmitOtp(SubmitOtpRequest) returns (SubmitOtpResponse) {}
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

message LoginRequest {
    string phone_number = 1;
}

message LoginResponse {
}

message SubmitOtpRequest{
    string phone_number = 1;
    int64 otp_code = 2;
}

message SubmitOtpResponse {
    User user = 1;
    string access_token = 2;
}

message AuthenticateRequest {
    string access_token = 2;
}

message AuthenticateResponse {
    User user = 1;
}